# Okina

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_coverage.sh  setup.py
.kiro/specs/: okina-system.md
.kiro/specs/almalinux-updates-provider/: design.yml  requirements.yml  tasks.yml
.kiro/specs/change-monitor/: design.yml  requirements.yml  tasks.yml
.kiro/specs/diff-analyzer/: design.yml  requirements.yml  tasks.yml
.kiro/specs/notification-system/: design.yml  requirements.yml  tasks.yml
.kiro/steering/: README.md  development-standards.md  development-workflow.md  essential-rules.md  git-ssh-setup.md  okina-customizations.md
.kiro/steering-detailed/development/: ci-cd-standards.md  dev-environment.md  documentation-standards.md  project-structure.md  quality-gates.md  quality-management.md  quality-metrics.md  security-standards.md  spec-standards.md  testing-strategy.md
.kiro/steering-detailed/git/: git-workflow.md
.kiro/steering-detailed/release/: release-process.md  versioning-rules.md
.kiro/steering-detailed/task/: task-management.md
.kiro/templates/code/: module_template.py
.kiro/templates/scripts/: README.md
.kiro/templates/specs/: README.md  design.yml.template  requirements.yml.template  spec-creation-script.sh  tasks.yml.template
config/: settings.yml.sample
docs/: CHANGELOG.md  EXAMPLES.md  PROJECT_STRUCTURE.md
input-providers/almalinux-updates/: README.md  config.yml.sample  pytest.ini  requirements-dev.txt  requirements.txt
input-providers/almalinux-updates/src/almalinux_updates/: __init__.py  config_manager.py  error_handler.py
input-providers/almalinux-updates/tests/: __init__.py  test_config_manager.py  test_error_handler.py
scripts/: check.py  check_slack_config.py  test_notification.py  test_slack_notification.py
src/okina/: __init__.py  analyzer.py  exceptions.py  monitor.py  notification.py
tests/: conftest.py  test_analyzer_integration.py  test_analyzer_unit.py  test_monitor_integration.py  test_monitor_unit.py  test_notification_okina.py
